# turnip_registration

./: Jenkinsfile  README.md  requirements.txt
app/: main.py  models.py  schema.py
app/routers/: users.py
app/utils/: hashing.py
registration/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.migration  docker-compose.yml
registration/migrations/2023-01-08-223318_create_users/: up.sql
registration/scripts/: local_setup.sh  run_migrations.sh  setup.sh
registration/src/: main.rs
registration/src/conf/: crypto.rs  mod.rs
registration/src/db/: mod.rs  models.rs  schema.rs
registration/src/intergration_tests/: mod.rs
registration/src/routes/: get_users.rs  insert_user.rs  mod.rs
registration/src/utils/: mod.rs
