[package]
name = "registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
color-eyre = "0.3"
config = "0.10"
dotenv = "0.15"
eyre = "0.4"
rust-crypto = "0.2.36"
tracing-subscriber = "0.2"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]