[package]
name = "registration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4"
color-eyre = "0.3"
config = "0.10"
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["chrono", "postgres", "r2d2"]}
dotenv = "0.15"
eyre = "0.4"
failure = "0.1.8"
r2d2 = "0.8"
r2d2_postgres = "0.18"
tracing-subscriber = "0.2"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]